--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
               </div>
             </div>
 
+
             <!-- PALESTRA POWER BI -->
             <div class="day-box green-hover">
               <div class="profile-box">
@@ -415,6 +416,27 @@
                 </p>
               </div>
             </div>
+
+            <!-- PALESTRA PROJETO NESTANTE -->
+            <div class="day-box green-hover">
+              <div class="profile-box">
+                <div class="avatar">
+                  <img src="/src/assets/caisTech2023/palestrantes/FabioNunes.jpeg" alt="Imagem do Apresetador" />
+                </div>
+                <h3>Fábio Nunes</h3>
+              </div>
+              <div class="info-box">
+                <div class="type">
+                  <span>Palestra</span>
+                </div>
+                <span> 20:00 - 21:00 </span>
+                <h3>A EXPERIÊNCIA COM O EDUCAR NESTANTE EM ESCOLAS DO SEMIÁRIDO PIAUIENSE.</h3>
+                <p>
+                  A experiência do projeto "Educar NESTANTE" em escolas do semiárido piauiense. Serão compartilhados resultados e desafios enfrentados na implementação do programa, que tem como objetivo estimular a prática de hábitos saudáveis durante a gestação e contribuir para a melhoria da saúde materno-infantil. Uma oportunidade imperdível para conhecer iniciativas que fazem a diferença na educação e na saúde em regiões mais carentes do país.
+                </p>
+              </div>
+            </div>
+
           </div>
 
           <div id="Three" class="tab-content">
@@ -631,6 +653,7 @@
               </div> -->
 
           </div>
+
           <a href="https://forms.gle/Eo1T4NmUWR2i9JWw7" target="_blank" class="btn-join">Quero participar das
             atividades</a>
         </div>
@@ -647,6 +670,8 @@
               <h2>Quem irá palestrar</h2>
             </div>
           </div>
+
+          <!-- PEDRO -->
           <div class="row mb-5 d-flex justify-content-between card-speaker">
             <div class="col-md-5 col-lg-5 speaker-img">
               <img src="src/assets/caisTech2023/palestrantes/Pd.png" alt="palestrante" />
@@ -679,10 +704,46 @@
               </div>
             </div>
           </div>
-          <div class="row mb-5 d-flex justify-content-between card-speaker a-1 grid">
+
+          <!-- FÁBIO -->
+          <div class="row mb-5 d-flex justify-content-between card-speaker a-1 grid" >
             <div class="col-md-7 pt-4 pr-5 info-speaker s-1 infos">
-              <h2>Gabriel Buzzi</h2>
+              <h2>Fábio Nunes</h2>
               <div class="bio-speaker b-2">
+                <span>A experiência com o Educar Nestante em escolas do semiárido piauiense.</span>
+                <p>
+                  Professor de Língua Portuguesa para o Ensino Fundamental e Médio, além de ser um radialista. Possui especialização em Estudos Literários pela UESPI e está atualmente realizando mestrado em Letras pelo Profletras também pela UESPI.
+                  Presidente do Conselho Municipal de Educação de Tanque do Piauí e ocupa o cargo de Secretário Executivo do EDUCARE, projeto educacional da rede municipal de ensino dessa mesma cidade. É também o coordenador do Projeto de Recomposição da Aprendizagem, iniciativa realizada em parceria com a Secretaria de Educação do Estado do Piauí (SEDUC).
+                </p>
+                <div class="speaker-links">
+                  <h6>Redes Sociais</h6>
+                  <div class="d-flex links">
+                    <a href="https://www.instagram.com/prof.fabiomedeiros/" target="_blank"
+                      ><i class="bx bxl-instagram"></i
+                    ></a>
+                    <a href="https://youtube.com/@fabiomedeiros6446" target="_blank"
+                      ><i class="bx bxl-youtube"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-5 col-lg-5 speaker-img s-2 img">
+              <img
+                src="/src/assets/caisTech2023/palestrantes/FabioNunes.jpeg"
+                alt="palestrante"
+              />
+            </div>
+          </div>
+
+          <!-- GABRIEL -->
+          <div class="row mb-5 d-flex justify-content-between card-speaker">
+            <div class="col-md-5 col-lg-5 speaker-img">
+              <img src="src/assets/caisTech2023/palestrantes/Gabriel Buzzi 3.jpg" alt="palestrante" />
+            </div>
+            <div class="col-md-7 pt-4 info-speaker">
+              <h2>Gabriel Buzzi</h2>
+              <div class="bio-speaker">
                 <span>Como acelerar seu produto com a API do GPT.</span>
                 <p>
                   Programador há mais de 11 anos, Cristão e apaixonado por tecnologia e resolver problemas. O seu
@@ -692,129 +753,20 @@
                 <div class="speaker-links">
                   <h6>Redes Sociais</h6>
                   <div class="d-flex links">
-                    <a href="https://www.instagram.com/gabrielbuzzi/" target="_blank"><i
-                        class="bx bxl-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/gabrielbuzziv/" target="_blank"><i
-                        class="bx bxl-linkedin"></i></a>
-                    <a href="https://github.com/gabrielbuzziv" target="_blank"><i class="bx  bxl-github"></i></a>
+                    <a href="https://www.instagram.com/gabrielbuzzi/" target="_blank">
+                      <i class="bx bxl-instagram"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/gabrielbuzziv/" target="_blank">
+                      <i class="bx bxl-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/gabrielbuzziv" target="_blank">
+                      <i class="bx bxl-youtube"></i>
+                    </a>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-5 col-lg-5 speaker-img s-2 img">
-              <img src="src/assets/caisTech2023/palestrantes/Gabriel Buzzi 3.jpg" alt="palestrante" />
             </div>
           </div>
-          <!-- 
-            <div class="row mb-5 d-flex justify-content-between card-speaker">
-              <div class="col-md-5 col-lg-5 speaker-img">
-                <img
-                  src="/src/assets/palestrantes/Karoline Farias - Palestra PyLadies THE.webp"
-                  alt="palestrante-01"
-                />
-              </div>
-              <div class="col-md-7 pt-4 info-speaker">
-                <h2>Karoline Farias</h2>
-                <div class="bio-speaker">
-                  <span>Roda de Conversa com as Pyladies THE</span>
-                  <p>
-                    Organizadora da Pyladies Teresina desde 2020,
-                    vice-coordenadora do time de podcast da comunidade
-                    StartCoding, atualmente trabalha como Pesquisadora na
-                    empresa Maida Health, onde atua gerenciando e desenvolvendo
-                    projetos de inteligência artificial para gestão em saúde.
-                  </p>
-                  <div class="speaker-links">
-                    <h6>Redes Sociais</h6>
-                    <div class="d-flex links">
-                      <a href="" target="_blank">
-                        <i class="bx bxl-instagram"></i>
-                      </a>
-                      <a href="" target="_blank">
-                        <i class="bx bxl-github"></i>
-                      </a>
-                      <a href="" target="_blank">
-                        <i class="bx bxl-facebook"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div
-              class="row mb-5 d-flex justify-content-between card-speaker a-1 grid"
-            >
-              <div class="col-md-7 pt-4 pr-5 info-speaker s-1 infos">
-                <h2>Gabrielle Rodrigues</h2>
-                <div class="bio-speaker b-2">
-                  <span>Trabalhando em Tech - como é e por onde começar?</span>
-                  <p>
-                    Atua como Engenheira de Dados no iFood e é fundadora da
-                    Edumi, uma startup de impacto social que capacita jovens
-                    para o mercado de tecnologia e cria pontes entre os dois. É
-                    fellow ProLíder e apaixonada por causas sociais.
-                  </p>
-                  <div class="speaker-links">
-                    <h6>Redes Sociais</h6>
-                    <div class="d-flex links">
-                      <a href="" target="_blank"
-                        ><i class="bx bxl-instagram"></i
-                      ></a>
-                      <a href="" target="_blank"
-                        ><i class="bx bxl-linkedin"></i
-                      ></a>
-                      <a href="" target="_blank"
-                        ><i class="bx bxl-facebook"></i
-                      ></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-5 col-lg-5 speaker-img s-2 img">
-                <img
-                  src="/src/assets/palestrantes/Gabrielle Rodrigues - Palestra sobre Mercado de Trabalho.webp"
-                  alt="palestrante"
-                />
-              </div>
-            </div>
-
-            <div class="row mb-5 d-flex justify-content-between card-speaker">
-              <div class="col-md-5 col-lg-5 speaker-img">
-                <img
-                  src="/src/assets/palestrantes/karina.jpg"
-                  alt="palestrante"
-                />
-              </div>
-              <div class="col-md-7 pt-4 info-speaker">
-                <h2>Karina Tronkos</h2>
-                <div class="bio-speaker">
-                  <span>Migração de carreiras: dicas e oportunidades</span>
-                  <p>
-                    Cientista da Computação, UX Designer e foi vencedora do
-                    Scholarship da Apple nos últimos 5 anos. Trabalha na
-                    Accenture e já trabalhou em empresas como Globosat,
-                    Globo.com e Hurb. Entusiasta e apaixonada por design e
-                    tecnologia, criou o Nina Talks para compartilhar sua jornada
-                    e tudo que a empolga e inspira nesse universo!
-                  </p>
-                  <div class="speaker-links">
-                    <h6>Redes Sociais</h6>
-                    <div class="d-flex links">
-                      <a href="" target="_blank">
-                        <i class="bx bxl-instagram"></i>
-                      </a>
-                      <a href="" target="_blank">
-                        <i class="bx bxl-github"></i>
-                      </a>
-                      <a href="" target="_blank">
-                        <i class="bx bxl-facebook"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div> -->
 
         </div>
       </div>
