--- a/index.html
+++ b/index.html
@@ -875,7 +875,6 @@
           </div>
 
           <div class="row">
-
             <!-- ANALISE DE DADOS COM POWER BI -->
             <div class="col-md col-lg">
               <div class="card-courses">
@@ -972,10 +971,8 @@
               </div>
             </div>
 
-          </div>
-
+          </div>           
           <div class="row pt-4">
-
             <!-- DESENVOLVIMENTO ASSEMBLY PARA UBUNTU -->
             <div class="col-md col-lg">
               <div class="card-courses">
@@ -998,7 +995,7 @@
                 </div>
               </div>
             </div>
-
+  
             <!-- SOCIEDADE EM REDE -->
             <div class="col-md col-lg">
               <div class="card-courses">
@@ -1023,7 +1020,6 @@
                 </div>
               </div>
             </div>
-
           </div>
 
           <!-- <div hidden class="row pt-4">
@@ -1243,6 +1239,90 @@
               <p>As inscrições estarão abertas até dia 30 de Maio.</p>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- section supporters -->
+    <section class="speaker" id="speaker">
+      <div class="container">
+        <div class="content-speaker">
+          <div class="row">
+            <div class="title-speaker">
+              <span></span>
+              <h2>Nossos Apoiadores</h2>
+            </div>
+          </div>
+
+          <!-- Rocketseat -->
+          <div class="row mb-5 d-flex justify-content-between card-speaker">
+            <div class="col-md-5 col-lg-5 speaker-img">
+              <img src="src/assets/caisTech2023/apoiadores/Rocketseat.jpg" alt="apoio" />
+            </div>
+            <div class="col-md-7 pt-4 info-speaker">
+              <h2>Rocketseat</h2>
+              <div class="bio-speaker">
+                <span>A Rocketseat é uma empresa brasileira de educação em tecnologia fundada em 2017.</span>
+                <p>
+                  Ela se concentra em fornecer cursos e treinamentos online voltados para o desenvolvimento web, mobile e de software em geral. A Rocketseat oferece uma plataforma de ensino chamada "Rocketseat Ignite", que conta com uma variedade de trilhas de aprendizado, cursos e mentorias. Essa plataforma é projetada para ensinar aos estudantes as habilidades técnicas e práticas necessárias para se tornarem desenvolvedores competentes.
+                </p>
+                <div class="speaker-links">
+                  <h6>Redes Sociais</h6>
+                  <div class="d-flex links">
+                    <a href="https://www.instagram.com/rocketseat/" target="_blank">
+                      <i class="bx bxl-instagram"></i>
+                    </a>
+                    <a href="https://www.rocketseat.com.br/" target="_blank">
+                      <i class="bx bxl-chrome "></i>
+                    </a>
+                    <a href="https://youtube.com/@rocketseat" target="_blank">
+                      <i class="bx bxl-youtube"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- INSTITUTO UBÍQUA -->
+          <div class="row mb-5 d-flex justify-content-between card-speaker a-1 grid" >
+            <div class="col-md-7 pt-4 pr-5 info-speaker s-1 infos">
+              <h2>Instituto Ubíqua</h2>
+              <div class="bio-speaker b-2">
+                <span>
+                  O Instituto Ubíqua atua com profissionalização de jovens rurais e de periferia.
+                </span>
+                <p>
+                  Desde de 2011 atua em comunicação social e novas tecnologias.
+                  Em 2020, a pandemia escancarou a dificuldade dos alunos para acessar a internet e ter equipamento. Então, nasceu o aplicativo Educar Nestante, uma plataforma educacional baseada nos Ciclos de Aprendizagem Ubíqua que funciona em situações com pouco ou nenhum acesso à internet.
+                </p>
+                <div class="speaker-links">
+                  <h6>Redes Sociais</h6>
+                  <div class="d-flex links">
+                    <a href="https://www.instagram.com/ubiqua_br/" target="_blank"
+                      ><i class="bx bxl-instagram"></i
+                    ></a>
+
+                    <a href="https://www.ubiqua.org.br/inicio/" target="_blank"
+                      ><i class="bx bxl-chrome"></i
+                    ></a>
+                    <a href="https://youtube.com/@nestante" target="_blank"
+                      ><i class="bx bxl-youtube"></i
+                    ></a>
+
+
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-5 col-lg-5 speaker-img s-2 img">
+              <img
+                src="/src/assets/caisTech2023/apoiadores/InstitutoUbiqua.jpg"
+                alt="apoio"
+              />
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
