add_scrollreveal_progrms

--- a/index.html
+++ b/index.html
@@ -9,24 +9,20 @@
   <!-- <link rel="stylesheet" href="/src/css/sliders.css"/> -->
   <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="shortcut icon" href="/src/assets/favicon.ico" />
+
   <title>Cais Tech 2023 | Online</title>
 
-  <meta name="author" content="Cais Tech 2023 - Trilhas a Seguir" />
+  <meta name="author" content="Cais Tech 2023 - Transformando Dados em Conhecimento" />
   <meta name="robots" content="index, follow" />
 
   <meta property="og:site_name" content="Cais Tech 2023 | Online" />
   <meta property="og:type" content="events.event" />
   <meta property="og:title" content="Cais Tech 2023 | Online" />
   <meta property="og:url" content="http://caistech.online" />
-  <meta name="og:author" content="Cais Tech 2023" />
-  <style>
-   
-  </style>
-  <script>
-   
-  </script>
-  
+  <meta name="og:author" content="Cais Tech 2023" />  
 </head>
 
 <body>
@@ -207,10 +203,7 @@
           <div class="row about-col">
             <div class="col-md col-lg col-sm mr-5">
               <div class="about-img">
-                <img src="/src/assets/cover-about.jpeg" alt="CaisTech - Floriano" />
-                <img src="/src/assets/cover-about.jpeg" alt="CaisTech - Floriano" hidden />
-                <img src="/src/assets/cover-about.jpeg" alt="CaisTech - Floriano" hidden />
-                <img src="/src/assets/cover-about.jpeg" alt="CaisTech - Floriano" hidden />
+                <img src="/src/assets/caisTech2023/imgCaisTech/about_evento.jpg" alt="CaisTech - Floriano" />
               </div>
             </div>
             <div class="col-md col-lg col-sm">
@@ -1460,6 +1453,7 @@
   <script type="text/javascript" src="./src/js/sidenav.js"></script>
   <script type="text/javascript" src="./src/js/tab.js"></script>
   <script type="text/javascript" src="./src/js/collapse.js"></script>
+  <script type="text/javascript" src="./src/js/scrooll.js"></script>
 
   <!-- Initialize Swiper -->
   <script>
