--- a/index.html
+++ b/index.html
@@ -867,9 +867,9 @@
             </div>
           </div>
 
-          <div class="row">
+          <div class="grid sm:m-0 md:mx-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 justify-center">
             <!-- ANALISE DE DADOS COM POWER BI -->
-            <div class="col-md col-lg">
+            <div class="">
               <div class="card-courses">
                 <div class="card-img-box">
                   <img src="/src/assets/caisTech2023/minicursos/Power-BI.jpg" alt="" />
@@ -893,7 +893,7 @@
             </div>
 
             <!-- VISÃO COMPUTACIONAL  -->
-            <div class="col-md col-lg">
+            <div class="">
               <div class="card-courses">
                 <div class="card-img-box">
                   <img src="src/assets/caisTech2023/minicursos/Vc.jpg" alt="" />
@@ -916,7 +916,7 @@
             </div>
 
             <!-- CÓDIGO CLARO E TESTADO: NODEJS -->
-            <div class="col-md col-lg">
+            <div class="">
               <div class="card-courses">
                 <div class="card-img-box">
                   <img src="src/assets/caisTech2023/minicursos/Nodejs.jpg" alt="" />
@@ -941,7 +941,7 @@
             </div>
 
             <!-- REST API COM DJANGO -->
-            <div class="col-md col-lg">
+            <div class="">
               <div class="card-courses">
                 <div class="card-img-box">
                   <img src="src/assets/caisTech2023/minicursos/ApiDjango.jpg" alt="" />
@@ -964,10 +964,8 @@
               </div>
             </div>
 
-          </div>           
-          <div class="row pt-4">
             <!-- DESENVOLVIMENTO ASSEMBLY PARA UBUNTU -->
-            <div class="col-md col-lg">
+            <div class="">
               <div class="card-courses">
                 <div class="card-img-box">
                   <img src="src/assets/caisTech2023/minicursos/Assembly.jpg" alt="" />
@@ -988,9 +986,9 @@
                 </div>
               </div>
             </div>
-  
+
             <!-- SOCIEDADE EM REDE -->
-            <div class="col-md col-lg">
+            <div class="">
               <div class="card-courses">
                 <div class="card-img-box">
                   <img src="src/assets/caisTech2023/minicursos/SociedadeRede.jpg" alt="" />
@@ -1012,7 +1010,7 @@
                   </p>
                 </div>
               </div>
-            </div>
+            </div>          
           </div>
 
           <!-- <div hidden class="row pt-4">
