changes_grid_cols_courses

--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
             </div>
           </div>
 
-          <div class="grid sm:m-0 md:mx-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 justify-center">
+          <div class="grid sm:m-0 md:mx-4 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-4 justify-center">
             <!-- ANALISE DE DADOS COM POWER BI -->
             <div class="">
               <div class="card-courses">
