remove_link_enrollment

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <li><a href="#questions">Duvidas</a></li>
               <li><a href="#contact">Contato</a></li>
               <li>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLScU1R14Y2GwxkAmb2YPd7M3i3tN_V5IttFEupHDcj9FS6cUVw/viewform"
+                <a href=""
                   class="btn-ticket" target="_blank">Inscreva-se</a>
               </li>
             </ul>
@@ -117,7 +117,7 @@
         <li><a href="#questions" onclick="closeNav()">Perguntas</a></li>
         <li><a href="#contact" onclick="closeNav()">Contato</a></li>
         <li>
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLScU1R14Y2GwxkAmb2YPd7M3i3tN_V5IttFEupHDcj9FS6cUVw/viewform"
+          <a href=""
             target="_blank" class="btn-ticket">Inscreva-se</a>
         </li>
       </div>
@@ -326,6 +326,26 @@
           </div>
 
           <div id="Two" class="tab-content">
+
+            <!-- MOSTRA DE PROJETOS DOS CURSOS TÉCNICOS -->
+            <div class="day-box green-hover">
+              <div class="profile-box">
+                <div class="avatar">
+                  <img src="/src/assets/caisTech2023/imgCaisTech/ilustration.jpg" alt="Imagem do Apresetador" />
+                </div>
+                <h3>IFPI</h3>
+              </div>
+              <div class="info-box">
+                <div class="type">
+                  <span>APRESENTAÇÃO</span>
+                </div>
+                <span> 08:00 - 12:00</span>
+                <h3>APRESENTAÇÃO DE PROJETOS DOS CURSOS TÉCNICOS</h3>
+                <p>
+
+                </p>
+              </div>
+            </div>
 
             <!-- CAMPEONATO DE JOGOS ETAPA 01 -->
             <div class="day-box green-hover">
@@ -647,7 +667,7 @@
 
           </div>
 
-          <a href="https://forms.gle/Eo1T4NmUWR2i9JWw7" target="_blank" class="btn-join">Quero participar das
+          <a href="" target="_blank" class="btn-join">Quero participar das
             atividades</a>
         </div>
       </div>
