--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <img src="src/assets/caisTech2023/carrosel/divaStore_full.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="src/assets/caisTech2023/carrosel/divaStore_full.jpg" alt="">
+            <img src="src/assets/caisTech2023/carrosel/knn.jpg" alt="">
           </div>
 
           <div class="swiper-slide">
@@ -276,10 +276,11 @@
               <div class="about-links">
                 <h6>Redes Sociais</h6>
                 <div class="d-flex links">
-                  <a href="" target="_blank">
+                  <a href="https://www.instagram.com/caistechflo/"
+                    target="_blank">
                     <i class="bx bxl-instagram"></i>
                   </a>
-                  <a href="" target="_blank">
+                  <a href="https://www.youtube.com/caistech" target="_blank">
                     <i class="bx bxl-youtube"></i>
                   </a>
                 </div>
@@ -725,13 +726,13 @@
       </div>
     </section>
 
-    <!-- section speakers -->
+    <!-- section speakers/ supporters -->
     <section class="speaker" id="speaker">
       <div class="container">
         <div class="content-speaker">
           <div class="row">
             <div class="title-speaker">
-              <span>Palestras</span>
+              <span>Palestras/ Apoiadores</span>
               <h2>Quem irá palestrar</h2>
             </div>
           </div>
@@ -801,19 +802,47 @@
             </div>
           </div>
 
-          <!-- GABRIEL -->
+          <!-- INSTITUTO UBÍQUA -->
           <div class="row mb-5 d-flex justify-content-between card-speaker">
             <div class="col-md-5 col-lg-5 speaker-img">
-              <img src="src/assets/caisTech2023/palestrantes/Gabriel Buzzi 3.jpg" alt="palestrante" />
+              <img src="/src/assets/caisTech2023/apoiadores/InstitutoUbiqua.jpg" alt="palestrante" />
             </div>
             <div class="col-md-7 pt-4 info-speaker">
-              <h2>Gabriel Buzzi</h2>
+              <h2>Instituto Ubíqua</h2>
               <div class="bio-speaker">
-                <span>Como acelerar seu produto com a API do GPT.</span>
+                <span>
+                  O Instituto Ubíqua atua com profissionalização de jovens rurais e de periferia.
+                </span>
                 <p>
-                  Programador há mais de 11 anos, Cristão e apaixonado por tecnologia e resolver problemas. O seu
-                  propósito é ajudar devs a desenvolverem sua carreira, mostrando que nem só de código vive um
-                  programador.
+                  Desde de 2011 atua em comunicação social e novas tecnologias.
+                  Em 2020, a pandemia escancarou a dificuldade dos alunos para acessar a internet e ter equipamento. Então, nasceu o aplicativo Educar Nestante, uma plataforma educacional baseada nos Ciclos de Aprendizagem Ubíqua que funciona em situações com pouco ou nenhum acesso à internet.
+                </p>
+                <div class="speaker-links">
+                  <h6>Redes Sociais</h6>
+                  <div class="d-flex links">
+                    <a href="https://www.instagram.com/ubiqua_br/" target="_blank"
+                      ><i class="bx bxl-instagram"></i
+                    ></a>
+                    <a href="https://www.ubiqua.org.br/inicio/" target="_blank"
+                      ><i class="bx bxl-chrome"></i
+                    ></a>
+                    <a href="https://youtube.com/@nestante" target="_blank"
+                      ><i class="bx bxl-youtube"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- GABRIEL BUZZI -->
+          <div class="row mb-5 d-flex justify-content-between card-speaker a-1 grid" >
+            <div class="col-md-7 pt-4 pr-5 info-speaker s-1 infos">
+              <h2> GABRIEL BUZZI</h2>
+              <div class="bio-speaker b-2">
+                <span> COMO ACELERAR SEU PRODUTO COM A API DO GPT.</span>
+                <p>
+                  Programador há mais de 11 anos, Cristão e apaixonado por tecnologia e resolver problemas. O seu propósito é ajudar devs a desenvolverem sua carreira, mostrando que nem só de código vive um programador.
                 </p>
                 <div class="speaker-links">
                   <h6>Redes Sociais</h6>
@@ -831,8 +860,43 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-5 col-lg-5 speaker-img s-2 img">
+              <img
+                src="/src/assets/caisTech2023/palestrantes/Gabriel Buzzi 3.jpg"
+                alt="palestrante"
+              />
+            </div>
           </div>
 
+          <!-- Rocketseat -->
+          <div class="row mb-5 d-flex justify-content-between card-speaker">
+            <div class="col-md-5 col-lg-5 speaker-img">
+              <img src="/src/assets/caisTech2023/apoiadores/Rocketseat.jpg" alt="Apoiador" />
+            </div>
+            <div class="col-md-7 pt-4 info-speaker">
+              <h2>Rocketseat</h2>
+              <div class="bio-speaker">
+                <span>A Rocketseat é uma empresa brasileira de educação em tecnologia fundada em 2017.</span>
+                <p>
+                  Ela se concentra em fornecer cursos e treinamentos online voltados para o desenvolvimento web, mobile e de software em geral. A Rocketseat oferece uma plataforma de ensino chamada "Rocketseat Ignite", que conta com uma variedade de trilhas de aprendizado, cursos e mentorias. Essa plataforma é projetada para ensinar aos estudantes as habilidades técnicas e práticas necessárias para se tornarem desenvolvedores competentes.
+                </p>
+                <div class="speaker-links">
+                  <h6>Redes Sociais</h6>
+                  <div class="d-flex links">
+                    <a href="https://www.instagram.com/rocketseat/" target="_blank">
+                      <i class="bx bxl-instagram"></i>
+                    </a>
+                    <a href="https://www.rocketseat.com.br/" target="_blank">
+                      <i class="bx bxl-chrome "></i>
+                    </a>
+                    <a href="https://youtube.com/@rocketseat" target="_blank">
+                      <i class="bx bxl-youtube"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -1255,6 +1319,7 @@
               <h2>Perguntas Frequêntes</h2>
             </div>
           </div>
+
           <div class="box-questions">
             <button type="button" class="collapsible">
               O que é o Cais Tech?
@@ -1266,6 +1331,18 @@
               </p>
             </div>
           </div>
+
+          <div class="box-questions">
+            <button type="button" class="collapsible">
+              Tem certificado?
+            </button>
+            <div class="box-answers">
+              <p>
+                Sim! Ao participar do evento você ganhará um certificado.
+              </p>
+            </div>
+          </div>
+
           <div class="box-questions">
             <button type="button" class="collapsible">
               Quando ocorrerá o evento?
@@ -1274,14 +1351,16 @@
               <p>Este ano o evento acontecerá em 31 de Maio, 01 e 02 de Junho de 2023.</p>
             </div>
           </div>
+
           <div class="box-questions">
             <button type="button" class="collapsible">
-              Qual o valor das inscrições?
+              Quanto custa participar?
             </button>
             <div class="box-answers">
-              <p>O evento será totalmente gratuito.</p>
+              <p>Nada. O evento é 100% gratuito!</p>
             </div>
           </div>
+
           <div class="box-questions">
             <button type="button" class="collapsible">
               O que eu poderei ver durante o evento?
@@ -1294,6 +1373,7 @@
               </p>
             </div>
           </div>
+
           <div class="box-questions">
             <button type="button" class="collapsible">
               Até quando vão as inscrições?
@@ -1302,12 +1382,13 @@
               <p>As inscrições estarão abertas até dia 30 de Maio.</p>
             </div>
           </div>
+
         </div>
       </div>
     </section>
 
     <!-- section supporters -->
-    <section class="speaker" id="speaker">
+    <section hidden class="speaker" id="speaker">
       <div class="container">
         <div class="content-speaker">
           <div class="row">
@@ -1422,23 +1503,36 @@
           <div style="padding-top: 0px" class="box-sponsors pb-3">
             <div class="img-sponsors">
               <!-- SOLAR SUPPORT -->
-              <a href="https://www.instagram.com/solar_support/" target="_blank"><img style="width: 250px"
-                  src="/src/assets/SOLAR-SUPPORT.png" alt="" /></a>
+              <a href="https://www.instagram.com/solar_support/"       
+                target="_blank"><img style="width: 250px"
+                src="/src/assets/caisTech2023/patrocinadores/solar_suppport.png" alt="" />
+              </a>
+
+              <!-- KNN IDIOMAS -->
+              <a href=""       
+                target="_blank"><img style="width: 250px"
+                src="/src/assets/caisTech2023/patrocinadores/knntheworld.png" alt="" />
+              </a>
+
               <!-- AI Q FOME -->
               <a href="https://www.instagram.com/aiqfome/" target="_blank"><img style="width: 250px"
-                  src="/src/assets/caisTech2023/patrocinadores/aiQfome.svg" alt="" /></a>
+                  src="/src/assets/caisTech2023/patrocinadores/aiQfome.svg" alt="" />
+              </a>
 
               <!-- DIVA STORE -->
               <a href="https://www.instagram.com/divastoreflo/" target="_blank"><img style="width: 250px"
-                  src="src/assets/caisTech2023/patrocinadores/divastore-logo.jpg" alt="" /></a>
+                src="src/assets/caisTech2023/patrocinadores/divastore-logo.jpg" alt="" /></a>
 
               <!-- CARVALHO FERREIRA -->
               <a href="https://instagram.com/cfassessoriacontabil?igshid=YmMyMTA2M2Y=" target="_blank"><img
                   style="width: 250px" src="/src/assets/caisTech2023/patrocinadores/CarvalhoFerreira.svg" alt="" /></a>
-              <!-- CARVALHO VIRTEX -->
-              <a href="https://instagram.com/cfassessoriacontabil?igshid=YmMyMTA2M2Y=" target="_blank"><img
+              <!-- VIRTEX -->
+              <a href="" target="_blank"><img
                   style="width: 250px" src="src/assets/caisTech2023/patrocinadores/virtex.png" alt="" /></a>
-
+              <!-- O BOTICÁRIO-->
+              <a href="" target="_blank"><img
+                  style="width: 250px" src="/src/assets/caisTech2023/patrocinadores/obticario.jpg" alt="" />
+              </a>
             </div>
           </div>
           <div class="box-support pt-5">
