add_whatsapp_sponsors

--- a/index.html
+++ b/index.html
@@ -1753,7 +1753,7 @@
             <div class="title-sponsors">
               <h2>Deseja patrocinar o evento?</h2>
             </div>
-            <a href="https://forms.gle/DWda8KcKAMZwaWqD6" target="_blank" class="btn-join">Seja nosso patrocinador</a>
+            <a href="https://api.whatsapp.com/send?phone=89994409955" target="_blank" class="btn-join">Seja nosso patrocinador</a>
           </div>
 
           <!-- <div class="box-support">
