--- a/index.html
+++ b/index.html
@@ -42,52 +42,7 @@
               <li><a href="#programs">Programação</a></li>
               <li><a href="#questions">Duvidas</a></li>
               <li><a href="#contact">Contato</a></li>
-              <li>
-                <div class="ml-4">
-                  <button id="open" class="px-5 py-2 bg-[#6e25ce]  hover:bg-[#1fc47a] text-white cursor-pointer font-semibold rounded-md uppercase">
-                    Inscrever-se
-                </button>
-            
-                <!-- Overlay element -->
-                <div id="overlay" class="fixed hidden z-40 w-screen h-screen inset-0 bg-gray-900 bg-opacity-60"></div>
-            
-                <!-- The dialog -->
-                <div 
-                  id="dialog"
-                  class="hidden fixed z-50 top-1/2 left-1/2 -translate-x-1/2 -translate-y-6 w-96 bg-gray-500 rounded-md px-8 py-6 space-y-5 drop-shadow-lg "
-                >
-                  <h1 class="text-2xl font-semibold text-white">Aguarde!</h1>
-                  <div class=" justify-center py-5 border-t border-b border-gray-300 text-white">
-                      <p>Siga-nos nas redes sociais para mais informações</p>
-                      <div class="mt-2 justify-center">
-                        <a 
-                          class="bg-[#6e25ce] rounded-md hover:bg-[#22da87] p-2" 
-                          href="https://www.instagram.com/caistechflo/" 
-                          target="_blank">
-                          <i class="bx bxl-instagram text-2xl text-white"></i>
-                        </a>
-                        <a
-                          class="bg-[#6e25ce] p-2 rounded-md hover:bg-[#22da87]"
-                          href="https://www.youtube.com/caistech" 
-                          target="_blank">
-                          <i class="bx bxl-youtube text-2xl text-white"></i>
-                        </a>
-                      </div>
-                  </div>
-                  <div class="flex justify-end">
-                      <!-- This button is used to close the dialog -->
-                      <button
-                        id="close" 
-                        class="px-5 py-2 bg-indigo-500 hover:bg-indigo-700 text-white cursor-pointer rounded-md"
-                      >
-                        Fechar
-                      </button>
-                  </div>
-                </div>
-                </div>
-                <!-- <a href=""
-                  class="btn-ticket" target="_blank">Inscrever-se</a> -->
-              </li>
+              <li><a class="btn-ticket"  href="https://suap.ifpi.edu.br/eventos/inscricao_publica/596/" target="_blank">Inscrever-se</a></li>
             </ul>
           </div>
           <div class="menu-toggle" onclick="openNav()">
@@ -114,6 +69,9 @@
           </div>
           <div class="swiper-slide">
             <img src="src/assets/caisTech2023/carrosel/knn.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="src/assets/caisTech2023/patrocinadores/Arte_patrocinio_servicar_feed.jpg" alt="">
           </div>
 
           <div class="swiper-slide">
@@ -930,8 +888,8 @@
 
           </div>
 
-          <!-- <a href="" target="_blank" class="btn-join">Quero participar das
-            atividades</a> -->
+          <a href="https://suap.ifpi.edu.br/eventos/inscricao_publica/596/" target="_blank" class="btn-join">Quero participar das
+            atividades</a>
         </div>
       </div>
     </section>
