--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
           <div class="swiper-slide">
             <img src="src/assets/caisTech2023/carrosel/divaStore_full.jpg" alt="">
           </div>
+
           <div class="swiper-slide">
             <img src="src/assets/caisTech2023/carrosel/knn.jpg" alt="">
           </div>
-          <div class="swiper-slide">
+
+          <!-- <div class="swiper-slide">
             <img src="src/assets/caisTech2023/patrocinadores/Arte_patrocinio_servicar_feed.jpg" alt="">
-          </div>
+          </div> -->
 
           <div class="swiper-slide">
             <img src="src/assets/caisTech2023/carrosel/Fome.jpg" alt="">
@@ -126,10 +128,10 @@
         <li><a href="#programs" onclick="closeNav()">Programação</a></li>
         <li><a href="#questions" onclick="closeNav()">Perguntas</a></li>
         <li><a href="#contact" onclick="closeNav()">Contato</a></li>
-        <!-- <li>
-          <a href=""
+        <li>
+          <a href="https://suap.ifpi.edu.br/eventos/inscricao_publica/596/"
             target="_blank" class="btn-ticket">Inscrever-se</a>
-        </li> -->
+        </li>
       </div>
     </header>
 
@@ -275,6 +277,31 @@
           </div>
 
           <div id="One" class="tab-content">
+            <p class="prog-a pt-3">Maratona de Programação</p>
+
+            <!-- CREDENCIAMENTO ETAPA 01 -->
+            <div class="day-box">
+              <div class="profile-box">
+                <div class="avatar">
+                  <img src="src/assets/caisTech2023/palestrantes/elane e vanessa.webp" alt="" />
+                </div>
+                <h3>ELANE SARAIVA E VANESSA VELOSO</h3>
+              </div>
+              <div class="info-box">
+                <div class="type">
+                  <span>Maratona de Programação</span>
+                </div>
+                <span>14:00 - 17:00</span>
+                <h3>Organize sua equipe (máximo 2 amig@s) para participar dessa minimaratona de programação.</h3>
+                <p>
+                  <button id="open" class="px-5 py-2 bg-[#6e25ce]  hover:bg-[#1fc47a] text-white cursor-pointer font-semibold rounded-md uppercase">
+                    <a class="" href="https://forms.gle/fS1L6BAmWXLvgVLR8" target="_blank">Participar</a>
+                </button>
+                </p>
+              </div>
+            </div>
+
+
             <p class="prog-a pt-3">Programação Auditório</p>
 
             <!-- CREDENCIAMENTO ETAPA 01 -->
