--- a/index.html
+++ b/index.html
@@ -277,31 +277,6 @@
           </div>
 
           <div id="One" class="tab-content">
-            <p class="prog-a pt-3">Maratona de Programação</p>
-
-            <!-- CREDENCIAMENTO ETAPA 01 -->
-            <div class="day-box">
-              <div class="profile-box">
-                <div class="avatar">
-                  <img src="src/assets/caisTech2023/palestrantes/elane e vanessa.webp" alt="" />
-                </div>
-                <h3>ELANE SARAIVA E VANESSA VELOSO</h3>
-              </div>
-              <div class="info-box">
-                <div class="type">
-                  <span>Maratona de Programação</span>
-                </div>
-                <span>14:00 - 17:00</span>
-                <h3>Organize sua equipe (máximo 2 amig@s) para participar dessa minimaratona de programação.</h3>
-                <p>
-                  <button id="open" class="px-5 py-2 bg-[#6e25ce]  hover:bg-[#1fc47a] text-white cursor-pointer font-semibold rounded-md uppercase">
-                    <a class="" href="https://forms.gle/fS1L6BAmWXLvgVLR8" target="_blank">Participar</a>
-                </button>
-                </p>
-              </div>
-            </div>
-
-
             <p class="prog-a pt-3">Programação Auditório</p>
 
             <!-- CREDENCIAMENTO ETAPA 01 -->
@@ -509,7 +484,29 @@
                 </p>
               </div>
             </div>
+            <p class="prog-a pt-3">Maratona de Programação</p>
 
+            <!-- CREDENCIAMENTO ETAPA 01 -->
+            <div class="day-box">
+              <div class="profile-box">
+                <div class="avatar">
+                  <img src="src/assets/caisTech2023/palestrantes/elane e vanessa.webp" alt="" />
+                </div>
+                <h3>ELANE SARAIVA E VANESSA VELOSO</h3>
+              </div>
+              <div class="info-box">
+                <div class="type">
+                  <span>Maratona de Programação</span>
+                </div>
+                <span>14:00 - 17:00</span>
+                <h3>Organize sua equipe (máximo 2 amigos) para participar dessa maratona de programação.</h3>
+                <p>
+                  <button id="open" class="px-5 py-2 bg-[#6e25ce]  hover:bg-[#1fc47a] text-white cursor-pointer font-semibold rounded-md uppercase">
+                    <a class="" href="https://forms.gle/fS1L6BAmWXLvgVLR8" target="_blank">Participar</a>
+                </button>
+                </p>
+              </div>
+            </div>
             <p class="prog-a pt-3">Programação Auditório</p>
 
             <!-- CREDENCIAMENTO ETAPA 02 -->
