--- a/index.html
+++ b/index.html
@@ -72,10 +72,6 @@
             <img src="src/assets/caisTech2023/carrosel/knn.jpg" alt="">
           </div>
 
-          <!-- <div class="swiper-slide">
-            <img src="src/assets/caisTech2023/patrocinadores/Arte_patrocinio_servicar_feed.jpg" alt="">
-          </div> -->
-
           <div class="swiper-slide">
             <img src="src/assets/caisTech2023/carrosel/Fome.jpg" alt="">
           </div>
@@ -94,6 +90,14 @@
 
           <div class="swiper-slide">
             <img src="src/assets/caisTech2023/carrosel/Virtex.jpg" alt="">
+          </div>
+
+          <div class="swiper-slide">
+            <img src="src/assets/caisTech2023/patrocinadores/vittry_store.png" alt="">
+          </div>
+
+          <div class="swiper-slide">
+            <img src="src/assets/caisTech2023/patrocinadores/Arte_patrocinio_servicar_feed.jpg" alt="">
           </div>
 
         </div>
@@ -490,9 +494,9 @@
             <div class="day-box">
               <div class="profile-box">
                 <div class="avatar">
-                  <img src="src/assets/caisTech2023/palestrantes/elane e vanessa.webp" alt="" />
+                  <img src="src/assets/caisTech2023/palestrantes/jvn.png" alt="" />
                 </div>
-                <h3>ELANE SARAIVA E VANESSA VELOSO</h3>
+                <h3>ELANE SARAIVA, JUSTINO SANTOS E VANESSA VELOSO</h3>
               </div>
               <div class="info-box">
                 <div class="type">
@@ -500,10 +504,15 @@
                 </div>
                 <span>14:00 - 17:00</span>
                 <h3>Organize sua equipe (máximo 2 amigos) para participar dessa maratona de programação.</h3>
-                <p>
-                  <button id="open" class="px-5 py-2 bg-[#6e25ce]  hover:bg-[#1fc47a] text-white cursor-pointer font-semibold rounded-md uppercase">
-                    <a class="" href="https://forms.gle/fS1L6BAmWXLvgVLR8" target="_blank">Participar</a>
-                </button>
+                <p class="no-underline">
+                  <a 
+                    class="px-5 py-2 bg-[#6e25ce]  hover:bg-[#1fc47a] text-white cursor-pointer font-semibold rounded-md uppercase  no-underline"
+                    href="https://forms.gle/fS1L6BAmWXLvgVLR8" 
+                    target="_blank"
+                  >
+                    Participar
+                  </a>
+
                 </p>
               </div>
             </div>
