--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,7 @@
           <div class="row">
             <div class="title-questions">
               <span>Dúvidas</span>
-              <h2>Perguntas Frequêntes</h2>
+              <h2>Perguntas Frequentes</h2>
             </div>
           </div>
 
@@ -1584,7 +1584,7 @@
               Até quando vão as inscrições?
             </button>
             <div class="box-answers">
-              <p>As inscrições estarão abertas até dia 30 de Maio.</p>
+              <p>As inscrições já estão encerradas!</p>
             </div>
           </div>
 
